bk_ida/gobmkida/g1/influence_get_moyo_segmentation
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/influence_get_moyo_segmentation/src/engine/influence.c:1852:6: error: use of undeclared identifier 'byte_A07ABF'
if ( byte_A07ABF[i] != 3 ) 
     ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/influence_get_moyo_segmentation/src/obj/1/influence.o] Error 1
